flux/infrastructure/base/garage/kustomize/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: garage
  labels:
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
