flux/infrastructure/base/garage/kustomize/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage
spec:
  ingressClassName: traefik
  rules:
    - host: "*.web.garage.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage
                port: {name: web}
