flux/infrastructure/base/garage/kustomize/resources/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage
spec:
  parentRefs:
    - name: external
      namespace: gateway-system
  hostnames:
    - "*.web.garage.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage
          port: 3902
